Fixed robots.txt Added overflow-x-auto for affiliates place-struct

--- a/website/assets/less/viewport.less
+++ b/website/assets/less/viewport.less
@@ -44,3 +44,6 @@
   overflow-y: auto;
 }
 
+.overflow-x-auto {
+  overflow-x: auto;
+}
